[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/robot.png" type="Texture" id=1]
[ext_resource path="res://scripts/Robot.gd" type="Script" id=2]
[ext_resource path="res://samples/robot_arrival2.wav" type="AudioStream" id=3]
[ext_resource path="res://samples/robot_attack.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/Confusion.tscn" type="PackedScene" id=5]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 282, 106, 141 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 424, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 530, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 742, 564, 106, 141 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 106, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 212, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 705, 106, 141 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 141, 106, 141 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "attack",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 25.1751, 44.2263 )

[node name="Robot" type="Area2D" groups=[
"enemies",
]]
collision_layer = 2
script = ExtResource( 2 )
speed = 50
max_hp = 20
base_damage = 10

[node name="Animation" type="AnimatedSprite" parent="."]
frames = SubResource( 20 )
animation = "idle"
offset = Vector2( 0, -57 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.307358, -45.7961 )
shape = SubResource( 21 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ConfusionTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="Confusion" parent="." instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( -0.307358, -38.7269 )

[node name="Arrival" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.75

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="timeout" from="ConfusionTimer" to="." method="_on_ConfusionTimer_timeout"]
